Import of THARDISON/Bank-Holidays-0.56 from CPAN.
gitpan-cpan-distribution: Bank-Holidays
gitpan-cpan-version:      0.56
gitpan-cpan-path:         THARDISON/Bank-Holidays-0.56.tar.gz
gitpan-cpan-author:       THARDISON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Bank::Holidays.
 
+0.56 Thu Feb 08 15:42:00 2007 
+  - Fixed PreReq
+
 0.55  Tue Feb 14 07:38:15 2006
 	- Initial release to CPAN
 
