--- a/Changes
+++ b/Changes
@@ -1,12 +1,15 @@
 Revision history for Perl extension Bank::Holidays.
+0.75 Tue Nov 05 11:49:00 2013
+  - Cache the data from the Fed to avoid reloading the page.
+      Helps with performance.
+      
 0.66 Fri Mar 02 07:54:00 2012
   - rleap found out that LWP::Simple can no longer read the
        holidays page. Switched to UA module and it works fine.
        Very sneaky Federal Reserve!
 
-0.56 Thu Feb 08 15:42:00 2007 
+0.56 Thu Feb 08 15:42:00 2007
   - Fixed PreReq
 
 0.55  Tue Feb 14 07:38:15 2006
 	- Initial release to CPAN
-
