Import of THARDISON/Bank-Holidays-0.76 from CPAN.
gitpan-cpan-distribution: Bank-Holidays
gitpan-cpan-version:      0.76
gitpan-cpan-path:         THARDISON/Bank-Holidays-0.76.tar.gz
gitpan-cpan-author:       THARDISON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Bank::Holidays.
+0.76 Tue Nov 05 01:36:00 2013
+  - Use make dist. (Color me shamed)
+
 0.75 Tue Nov 05 11:49:00 2013
   - Cache the data from the Fed to avoid reloading the page.
       Helps with performance.
