--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl extension Bank::Holidays.
+0.79 Mon Nov 11 19:40:00 2013
+  - Fix a problem in one of the tests.
+  
 0.78 Mon Nov 11 11:49:00 2013
   - Improve the tests to ensure proper function.
-  
+
 0.76 Tue Nov 05 01:36:00 2013
   - Use make dist. (Color me shamed)
 
